--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <provider
+            android:name=".data.PlaceProvider"
+            android:authorities="com.example.android.thegetaway"
+            android:exported="false" />
     </application>
 
 </manifest>
